# homies

./: .gitignore  .spectral.yaml  CLAUDE.md  Makefile  README.md  RELEASE.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2d9d18df4688_initial_schema.py
backend/app/: main.py
backend/app/core/: audit.py  config.py  ratelimit.py  security.py
backend/app/modules/: __init__.py
backend/app/modules/admin/: router.py
backend/app/modules/booking/: availability.py  models.py  router.py  schemas.py
backend/app/modules/events/: metrics.py  models.py  providers.py  service.py  templates.py  worker.py
backend/app/modules/identity/: models.py  router.py  schemas.py
backend/app/modules/ledger/: models.py  service.py
backend/app/modules/listings/: models.py  router.py  schemas.py
backend/app/modules/payments/: models.py  provider.py  reconciliation.py  router.py  service.py
backend/app/scripts/: create_admin.py
backend/scripts/backup/: backup.sh  dr_drill.sh  restore.sh  verify_restore.py
backend/scripts/warfare/: README.md  db_warfare.py  live_smoke.py  refund_warfare.py  warfare.py
backend/tests/: conftest.py  test_auth_and_rbac.py  test_b1_stripe.py  test_booking_rules.py  test_d5_hardening.py  test_e2e_flow.py  test_fin01_stripe_signature.py  test_health.py  test_oat02_notifications.py  test_oat03_delivery.py  test_oat_business.py  test_sec01_ratelimit.py  test_sec02_secret_config.py  test_security_authz.py
backend/tests/stripe_live/: test_stripe_live.py
docs/: BUILD_HISTORY.md  DECISIONS.md  DEVLOG.md  PROJECT_CHARTER.md  PROJECT_STATE.md  RELEASE_PLAN.md
docs/adr/: 0001-modular-monolith.md  0001-monorepo.md  README.md  (+9 more)
ops/: docker-compose.yml
(+49 files in other folders)
